BDB store optimizations