@@ -16,6 +16,7 @@
  * specific language governing permissions and limitations
  * under the License.
  */
+
 package org.apache.qpid.server.store.berkeleydb;
 
 import static org.apache.qpid.server.store.berkeleydb.BDBUtils.DEFAULT_DATABASE_CONFIG;
@@ -25,14 +26,17 @@ import java.nio.charset.StandardCharsets;
 import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.Collections;
+import java.util.IdentityHashMap;
 import java.util.List;
-import java.util.Random;
 import java.util.Set;
 import java.util.UUID;
 import java.util.concurrent.CompletableFuture;
 import java.util.concurrent.ConcurrentHashMap;
+import java.util.concurrent.ThreadLocalRandom;
 import java.util.concurrent.atomic.AtomicBoolean;
 import java.util.concurrent.atomic.AtomicLong;
+import java.util.function.Consumer;
+import java.util.function.Predicate;
 
 import com.sleepycat.bind.tuple.LongBinding;
 import com.sleepycat.je.Cursor;
@@ -63,7 +67,6 @@ import org.apache.qpid.server.store.StoreException;
 import org.apache.qpid.server.store.StoredMessage;
 import org.apache.qpid.server.store.TransactionLogResource;
 import org.apache.qpid.server.store.berkeleydb.entry.PreparedTransaction;
-import org.apache.qpid.server.store.berkeleydb.entry.QueueEntryKey;
 import org.apache.qpid.server.store.berkeleydb.tuple.MessageMetaDataBinding;
 import org.apache.qpid.server.store.berkeleydb.tuple.PreparedTransactionBinding;
 import org.apache.qpid.server.store.berkeleydb.tuple.QueueEntryBinding;
@@ -75,10 +78,8 @@ import org.apache.qpid.server.txn.Xid;
 import org.apache.qpid.server.util.CachingUUIDFactory;
 import org.apache.qpid.server.util.ConnectionScopedRuntimeException;
 
-
 public abstract class AbstractBDBMessageStore implements MessageStore
 {
-
     private static final int LOCK_RETRY_ATTEMPTS = 5;
 
     private static final String MESSAGE_META_DATA_DB_NAME = "MESSAGE_METADATA";
@@ -90,29 +91,39 @@ public abstract class AbstractBDBMessageStore implements MessageStore
     private static final String BRIDGEDB_NAME = "BRIDGES";
     private static final String LINKDB_NAME = "LINKS";
     private static final String XID_DB_NAME = "XIDS";
+
+    private static final ThreadLocal<DatabaseEntry> MESSAGE_ID_ENTRY = ThreadLocal.withInitial(() ->
+            new DatabaseEntry(new byte[8]));
+
+    private static final ThreadLocal<DatabaseEntry> ENQUEUE_RECORD_ENTRY = ThreadLocal.withInitial(() ->
+            new DatabaseEntry(new byte[0]));
+
+    private static final ThreadLocal<DatabaseEntry> QUEUE_ENTRY = ThreadLocal.withInitial(() ->
+            new DatabaseEntry(new byte[QueueEntryBinding.KEY_SIZE]));
+
     private final AtomicBoolean _messageStoreOpen = new AtomicBoolean();
 
     private final EventManager _eventManager = new EventManager();
 
-    private final DatabaseEntry MESSAGE_METADATA_SEQ_KEY = new DatabaseEntry("MESSAGE_METADATA_SEQ_KEY".getBytes(
-            StandardCharsets.UTF_8));
+    private final DatabaseEntry MESSAGE_METADATA_SEQ_KEY = new DatabaseEntry("MESSAGE_METADATA_SEQ_KEY"
+            .getBytes(StandardCharsets.UTF_8));
 
     private final SequenceConfig MESSAGE_METADATA_SEQ_CONFIG = SequenceConfig.DEFAULT.
             setAllowCreate(true).
             setInitialValue(1).
             setWrap(true).
             setCacheSize(100000);
+
     private ConfiguredObject<?> _parent;
     private long _persistentSizeLowThreshold;
     private long _persistentSizeHighThreshold;
 
     private boolean _limitBusted;
     private long _totalStoreSize;
-    private final Random _lockConflictRandom = new Random();
     private final AtomicLong _inMemorySize = new AtomicLong();
     private final AtomicLong _bytesEvacuatedFromMemory = new AtomicLong();
-    private final Set<StoredBDBMessage<?>> _messages = Collections.newSetFromMap(new ConcurrentHashMap<>());
-    private final Set<MessageDeleteListener> _messageDeleteListeners = Collections.newSetFromMap(new ConcurrentHashMap<>());
+    private final Set<StoredBDBMessage<?>> _messages = ConcurrentHashMap.newKeySet();
+    private final Set<MessageDeleteListener> _messageDeleteListeners = ConcurrentHashMap.newKeySet();
 
     @Override
     public void openMessageStore(final ConfiguredObject<?> parent)
@@ -141,13 +152,13 @@ public abstract class AbstractBDBMessageStore implements MessageStore
     {
         if (_messageStoreOpen.compareAndSet(true, false))
         {
-            for (StoredBDBMessage<?> message : _messages)
+            for (final StoredBDBMessage<?> message : _messages)
             {
                 message.clear(true);
             }
             _messages.clear();
-            _inMemorySize.set(0);
-            _bytesEvacuatedFromMemory.set(0);
+            _inMemorySize.set(0L);
+            _bytesEvacuatedFromMemory.set(0L);
             doClose();
         }
     }
@@ -164,7 +175,7 @@ public abstract class AbstractBDBMessageStore implements MessageStore
             // TODO this relies on the fact that the VH will call upgrade just before putting the VH into service.
             _totalStoreSize = getSizeOnDisk();
         }
-        catch(RuntimeException e)
+        catch (final RuntimeException e)
         {
             throw getEnvironmentFacade().handleDatabaseException("Cannot upgrade store", e);
         }
@@ -174,39 +185,33 @@ public abstract class AbstractBDBMessageStore implements MessageStore
     {
         try
         {
-            for (String db : Arrays.asList(MESSAGE_META_DATA_DB_NAME,
-                                          MESSAGE_META_DATA_SEQ_DB_NAME,
-                                          MESSAGE_CONTENT_DB_NAME,
-                                          DELIVERY_DB_NAME,
-                                          XID_DB_NAME))
+            for (final String db : List.of(MESSAGE_META_DATA_DB_NAME, MESSAGE_META_DATA_SEQ_DB_NAME,
+                    MESSAGE_CONTENT_DB_NAME, DELIVERY_DB_NAME, XID_DB_NAME))
             {
                 try
                 {
-
                     getEnvironmentFacade().deleteDatabase(db);
                 }
-                catch (DatabaseNotFoundException ignore)
+                catch (final DatabaseNotFoundException ignore)
                 {
+                    // no-op
                 }
-
             }
         }
-        catch (IllegalStateException e)
+        catch (final IllegalStateException e)
         {
             getLogger().warn("Could not delete message store databases: {}", e.getMessage());
         }
-        catch (RuntimeException e)
+        catch (final RuntimeException e)
         {
             getEnvironmentFacade().handleDatabaseException("Deletion of message store databases failed", e);
         }
     }
 
     @Override
-    public <T extends StorableMessageMetaData> MessageHandle<T> addMessage(T metaData)
+    public <T extends StorableMessageMetaData> MessageHandle<T> addMessage(final T metaData)
     {
-
-        long newMessageId = getNextMessageId();
-
+        final long newMessageId = getNextMessageId();
         return createStoredBDBMessage(newMessageId, metaData, false);
     }
 
@@ -227,17 +232,15 @@ public abstract class AbstractBDBMessageStore implements MessageStore
         {
             // The implementations of sequences mean that there is only a transaction
             // after every n sequence values, where n is the MESSAGE_METADATA_SEQ_CONFIG.getCacheSize()
-
-            Sequence mmdSeq = getEnvironmentFacade().openSequence(getMessageMetaDataSeqDb(),
-                                                              MESSAGE_METADATA_SEQ_KEY,
-                                                              MESSAGE_METADATA_SEQ_CONFIG);
+            final Sequence mmdSeq = getEnvironmentFacade().openSequence(getMessageMetaDataSeqDb(),
+                    MESSAGE_METADATA_SEQ_KEY, MESSAGE_METADATA_SEQ_CONFIG);
             newMessageId = mmdSeq.get(null, 1);
         }
-        catch(LockTimeoutException le)
+        catch (final LockTimeoutException le)
         {
            throw new ConnectionScopedRuntimeException("Unexpected exception on BDB sequence", le);
         }
-        catch (RuntimeException de)
+        catch (final RuntimeException de)
         {
             throw getEnvironmentFacade().handleDatabaseException("Cannot get sequence value for new message", de);
         }
@@ -272,7 +275,6 @@ public abstract class AbstractBDBMessageStore implements MessageStore
     public org.apache.qpid.server.store.Transaction newTransaction()
     {
         checkMessageStoreOpen();
-
         return new BDBTransaction();
     }
 
@@ -293,47 +295,43 @@ public abstract class AbstractBDBMessageStore implements MessageStore
      *
      * @param messageId The message to get the meta-data for.
      *
-     * @return The message meta data.
+     * @return The message metadata.
      *
      * @throws org.apache.qpid.server.store.StoreException If the operation fails for any reason, or if the specified message does not exist.
      */
-    StorableMessageMetaData getMessageMetaData(long messageId) throws StoreException
+    StorableMessageMetaData getMessageMetaData(final long messageId) throws StoreException
     {
         getLogger().debug("public MessageMetaData getMessageMetaData(Long messageId = {}): called", messageId);
 
-        DatabaseEntry key = new DatabaseEntry();
-        LongBinding.longToEntry(messageId, key);
-        DatabaseEntry value = new DatabaseEntry();
-        MessageMetaDataBinding messageBinding = MessageMetaDataBinding.getInstance();
+        final DatabaseEntry key = MESSAGE_ID_ENTRY.get();
+        QueueEntryBinding.writeMessageId(messageId, key);
+        final DatabaseEntry value = new DatabaseEntry();
 
         try
         {
-            OperationStatus status = getMessageMetaDataDb().get(null, key, value, LockMode.READ_UNCOMMITTED);
+            final OperationStatus status = getMessageMetaDataDb().get(null, key, value, LockMode.READ_UNCOMMITTED);
             if (status != OperationStatus.SUCCESS)
             {
                 throw new StoreException("Metadata not found for message with id " + messageId);
             }
-
-            StorableMessageMetaData mdd = messageBinding.entryToObject(value);
-
-            return mdd;
+            return MessageMetaDataBinding.getInstance().entryToObject(value);
         }
-        catch (RuntimeException e)
+        catch (final RuntimeException e)
         {
-            throw getEnvironmentFacade().handleDatabaseException("Error reading message metadata for message with id "
-                                                                 + messageId
-                                                                 + ": "
-                                                                 + e.getMessage(), e);
+            throw getEnvironmentFacade().handleDatabaseException("Error reading message metadata for message with id " +
+                    messageId + ": " + e.getMessage(), e);
         }
     }
 
-    void removeMessage(long messageId) throws StoreException
+    void removeMessage(final long messageId) throws StoreException
     {
         boolean complete = false;
         Transaction tx = null;
         int attempts = 0;
         try
         {
+            final DatabaseEntry key = MESSAGE_ID_ENTRY.get();
+            QueueEntryBinding.writeMessageId(messageId, key);
             do
             {
                 tx = null;
@@ -341,25 +339,17 @@ public abstract class AbstractBDBMessageStore implements MessageStore
                 {
                     tx = getEnvironmentFacade().beginTransaction(null);
 
-                    //remove the message meta data from the store
-                    DatabaseEntry key = new DatabaseEntry();
-                    LongBinding.longToEntry(messageId, key);
-
+                    // remove the message metadata from the store
                     getLogger().debug("Removing message id {}", messageId);
-
-
-                    OperationStatus status = getMessageMetaDataDb().delete(tx, key);
+                    final OperationStatus status = getMessageMetaDataDb().delete(tx, key);
                     if (status == OperationStatus.NOTFOUND)
                     {
                         getLogger().debug("Message id {} not found (attempt to remove failed - probably application initiated rollback)",messageId);
                     }
-
                     getLogger().debug("Deleted metadata for message {}", messageId);
 
-                    //now remove the content data from the store if there is any.
-                    DatabaseEntry contentKeyEntry = new DatabaseEntry();
-                    LongBinding.longToEntry(messageId, contentKeyEntry);
-                    getMessageContentDb().delete(tx, contentKeyEntry);
+                    // now remove the content data from the store if there is any
+                    getMessageContentDb().delete(tx, key);
 
                     getLogger().debug("Deleted content for message {}", messageId);
 
@@ -368,31 +358,29 @@ public abstract class AbstractBDBMessageStore implements MessageStore
                     complete = true;
                     tx = null;
                 }
-                catch (LockConflictException e)
+                catch (final LockConflictException e)
                 {
                     try
                     {
-                        if(tx != null)
+                        if (tx != null)
                         {
                             tx.abort();
                         }
                     }
-                    catch(RuntimeException e2)
+                    catch (final RuntimeException e2)
                     {
-                        getLogger().warn("Unable to abort transaction after LockConflictException on removal of message with id {}", messageId,
-                                e2);
+                        getLogger().warn("Unable to abort transaction after LockConflictException on removal of message with id {}", messageId, e2);
                         // rethrow the original log conflict exception, the secondary exception should already have
                         // been logged.
-                        throw getEnvironmentFacade().handleDatabaseException("Cannot remove message with id "
-                                                                             + messageId, e);
+                        throw getEnvironmentFacade().handleDatabaseException("Cannot remove message with id " + messageId, e);
                     }
 
                     sleepOrThrowOnLockConflict(attempts++, "Cannot remove messages", e);
                 }
             }
-            while(!complete);
+            while (!complete);
         }
-        catch (RuntimeException e)
+        catch (final RuntimeException e)
         {
             if (getLogger().isDebugEnabled())
             {
@@ -401,25 +389,21 @@ public abstract class AbstractBDBMessageStore implements MessageStore
 
             try
             {
-                abortTransactionSafely(tx,
-                                       getEnvironmentFacade());
+                abortTransactionSafely(tx, getEnvironmentFacade());
             }
             finally
             {
                 tx = null;
             }
 
-            throw getEnvironmentFacade().handleDatabaseException("Error removing message with id "
-                                                                 + messageId
-                                                                 + " from database: "
-                                                                 + e.getMessage(), e);
+            throw getEnvironmentFacade().handleDatabaseException("Error removing message with id " + messageId +
+                    " from database: " + e.getMessage(), e);
         }
         finally
         {
             try
             {
-                abortTransactionSafely(tx,
-                                       getEnvironmentFacade());
+                abortTransactionSafely(tx, getEnvironmentFacade());
             }
             finally
             {
@@ -428,24 +412,24 @@ public abstract class AbstractBDBMessageStore implements MessageStore
         }
     }
 
-    QpidByteBuffer getAllContent(long messageId) throws StoreException
+    QpidByteBuffer getAllContent(final long messageId) throws StoreException
     {
-        DatabaseEntry contentKeyEntry = new DatabaseEntry();
-        LongBinding.longToEntry(messageId, contentKeyEntry);
-        DatabaseEntry value = new DatabaseEntry();
+        final DatabaseEntry contentKeyEntry = MESSAGE_ID_ENTRY.get();
+        QueueEntryBinding.writeMessageId(messageId, contentKeyEntry);
+        final DatabaseEntry value = new DatabaseEntry();
 
         getLogger().debug("Message Id: {} Getting content body", messageId);
 
         try
         {
-            OperationStatus status = getMessageContentDb().get(null, contentKeyEntry, value, LockMode.READ_UNCOMMITTED);
+            final OperationStatus status = getMessageContentDb().get(null, contentKeyEntry, value, LockMode.READ_UNCOMMITTED);
 
             if (status == OperationStatus.SUCCESS)
             {
-                byte[] data = value.getData();
-                int offset = value.getOffset();
-                int length = value.getSize();
-                QpidByteBuffer buf = QpidByteBuffer.allocateDirect(length);
+                final byte[] data = value.getData();
+                final int offset = value.getOffset();
+                final int length = value.getSize();
+                final QpidByteBuffer buf = QpidByteBuffer.allocateDirect(length);
                 buf.put(data, offset, length);
                 buf.flip();
                 return buf;
@@ -454,52 +438,49 @@ public abstract class AbstractBDBMessageStore implements MessageStore
             {
                 throw new StoreException("Unable to find message with id " + messageId);
             }
-
         }
-        catch (RuntimeException e)
+        catch (final RuntimeException e)
         {
-            throw getEnvironmentFacade().handleDatabaseException("Error getting AMQMessage with id "
-                                                                 + messageId
-                                                                 + " to database: "
-                                                                 + e.getMessage(), e);
+            throw getEnvironmentFacade().handleDatabaseException("Error getting AMQMessage with id " + messageId +
+                    " to database: " + e.getMessage(), e);
         }
     }
 
-    private void visitMessagesInternal(MessageHandler handler, EnvironmentFacade environmentFacade)
+    private void visitMessagesInternal(final MessageHandler handler, final EnvironmentFacade environmentFacade)
     {
-        DatabaseEntry key = new DatabaseEntry();
-        DatabaseEntry value = new DatabaseEntry();
-        MessageMetaDataBinding valueBinding = MessageMetaDataBinding.getInstance();
+        final DatabaseEntry key = new DatabaseEntry();
+        final DatabaseEntry value = new DatabaseEntry();
+        final MessageMetaDataBinding valueBinding = MessageMetaDataBinding.getInstance();
 
-        try(Cursor cursor = getMessageMetaDataDb().openCursor(null, null))
+        try (final Cursor cursor = getMessageMetaDataDb().openCursor(null, null))
         {
             while (cursor.getNext(key, value, LockMode.READ_UNCOMMITTED) == OperationStatus.SUCCESS)
             {
-                long messageId = LongBinding.entryToLong(key);
-                StorableMessageMetaData metaData = valueBinding.entryToObject(value);
-                StoredBDBMessage message = createStoredBDBMessage(messageId, metaData, true);
+                final long messageId = LongBinding.entryToLong(key);
+                final StorableMessageMetaData metaData = valueBinding.entryToObject(value);
+                final StoredBDBMessage<?> message = createStoredBDBMessage(messageId, metaData, true);
                 if (!handler.handle(message))
                 {
                     break;
                 }
             }
         }
-        catch (RuntimeException e)
+        catch (final RuntimeException e)
         {
             throw environmentFacade.handleDatabaseException("Cannot visit messages", e);
         }
     }
 
-    private void sleepOrThrowOnLockConflict(int attempts, String throwMessage, LockConflictException cause)
+    private void sleepOrThrowOnLockConflict(final int attempts, final String throwMessage, final LockConflictException cause)
     {
         if (attempts < LOCK_RETRY_ATTEMPTS)
         {
             getLogger().info("Lock conflict exception. Retrying (attempt {} of {})", attempts, LOCK_RETRY_ATTEMPTS);
             try
             {
-                Thread.sleep(500L + (long)(500L * _lockConflictRandom.nextDouble()));
+                Thread.sleep(500L + ThreadLocalRandom.current().nextLong(500));
             }
-            catch (InterruptedException ie)
+            catch (final InterruptedException ie)
             {
                 Thread.currentThread().interrupt();
                 throw getEnvironmentFacade().handleDatabaseException(throwMessage, cause);
@@ -512,27 +493,22 @@ public abstract class AbstractBDBMessageStore implements MessageStore
         }
     }
 
-    private StoredBDBMessage<?> getMessageInternal(long messageId, EnvironmentFacade environmentFacade)
+    private StoredBDBMessage<?> getMessageInternal(final long messageId, final EnvironmentFacade environmentFacade)
     {
         try
         {
-            DatabaseEntry key = new DatabaseEntry();
-            DatabaseEntry value = new DatabaseEntry();
-            MessageMetaDataBinding valueBinding = MessageMetaDataBinding.getInstance();
-            LongBinding.longToEntry(messageId, key);
-            if(getMessageMetaDataDb().get(null, key, value, LockMode.READ_COMMITTED) == OperationStatus.SUCCESS)
+            final DatabaseEntry key = MESSAGE_ID_ENTRY.get();
+            QueueEntryBinding.writeMessageId(messageId, key);
+            final DatabaseEntry value = new DatabaseEntry();
+            final MessageMetaDataBinding valueBinding = MessageMetaDataBinding.getInstance();
+            if (getMessageMetaDataDb().get(null, key, value, LockMode.READ_COMMITTED) == OperationStatus.SUCCESS)
             {
-                StorableMessageMetaData metaData = valueBinding.entryToObject(value);
-                StoredBDBMessage message = createStoredBDBMessage(messageId, metaData, true);
-                return message;
+                final StorableMessageMetaData metaData = valueBinding.entryToObject(value);
+                return createStoredBDBMessage(messageId, metaData, true);
             }
-            else
-            {
-                return null;
-            }
-
+            return null;
         }
-        catch (RuntimeException e)
+        catch (final RuntimeException e)
         {
             throw environmentFacade.handleDatabaseException("Cannot visit messages", e);
         }
@@ -547,18 +523,18 @@ public abstract class AbstractBDBMessageStore implements MessageStore
      *
      * @throws org.apache.qpid.server.store.StoreException If the operation fails for any reason, or if the specified message does not exist.
      */
-    private void addContent(final Transaction tx, long messageId, QpidByteBuffer contentBody) throws StoreException
+    private void addContent(final Transaction tx, long messageId, final QpidByteBuffer contentBody) throws StoreException
     {
-        DatabaseEntry key = new DatabaseEntry();
-        LongBinding.longToEntry(messageId, key);
-        DatabaseEntry value = new DatabaseEntry();
+        final DatabaseEntry key = MESSAGE_ID_ENTRY.get();
+        QueueEntryBinding.writeMessageId(messageId, key);
+        final DatabaseEntry value = new DatabaseEntry();
 
-        byte[] data = new byte[contentBody.remaining()];
+        final byte[] data = new byte[contentBody.remaining()];
         contentBody.copyTo(data);
         value.setData(data);
         try
         {
-            OperationStatus status = getMessageContentDb().put(tx, key, value);
+            final OperationStatus status = getMessageContentDb().put(tx, key, value);
             if (status != OperationStatus.SUCCESS)
             {
                 throw new StoreException("Error adding content for message id " + messageId + ": " + status);
@@ -567,12 +543,10 @@ public abstract class AbstractBDBMessageStore implements MessageStore
             getLogger().debug("Storing content for message {} in transaction {}", messageId, tx);
 
         }
-        catch (RuntimeException e)
+        catch (final RuntimeException e)
         {
-            throw getEnvironmentFacade().handleDatabaseException("Error writing AMQMessage with id "
-                                                                 + messageId
-                                                                 + " to database: "
-                                                                 + e.getMessage(), e);
+            throw getEnvironmentFacade().handleDatabaseException("Error writing AMQMessage with id " + messageId +
+                    " to database: " + e.getMessage(), e);
         }
     }
 
@@ -581,22 +555,20 @@ public abstract class AbstractBDBMessageStore implements MessageStore
      *
      * @param tx         The transaction for the operation.
      * @param messageId       The message to store the data for.
-     * @param messageMetaData The message meta data to store.
+     * @param messageMetaData The message metadata to store.
      *
      * @throws org.apache.qpid.server.store.StoreException If the operation fails for any reason, or if the specified message does not exist.
      */
-    private void storeMetaData(final Transaction tx, long messageId, StorableMessageMetaData messageMetaData)
+    private void storeMetaData(final Transaction tx, final long messageId, final StorableMessageMetaData messageMetaData)
             throws StoreException
     {
-        getLogger().debug("storeMetaData called for transaction {}, messageId {}, messageMetaData {} ",
-                tx, messageId, messageMetaData);
+        getLogger().debug("storeMetaData called for transaction {}, messageId {}, messageMetaData {} ", tx, messageId, messageMetaData);
 
-        DatabaseEntry key = new DatabaseEntry();
-        LongBinding.longToEntry(messageId, key);
-        DatabaseEntry value = new DatabaseEntry();
+        final DatabaseEntry key = MESSAGE_ID_ENTRY.get();
+        QueueEntryBinding.writeMessageId(messageId, key);
 
-        MessageMetaDataBinding messageBinding = MessageMetaDataBinding.getInstance();
-        messageBinding.objectToEntry(messageMetaData, value);
+        final DatabaseEntry value = new DatabaseEntry();
+        MessageMetaDataBinding.getInstance().objectToEntry(messageMetaData, value);
 
         boolean complete = false;
         int attempts = 0;
@@ -610,64 +582,52 @@ public abstract class AbstractBDBMessageStore implements MessageStore
                 complete = true;
 
             }
-            catch (LockConflictException e)
+            catch (final LockConflictException e)
             {
                 sleepOrThrowOnLockConflict(attempts++, "Cannot store metadata", e);
             }
-            catch (RuntimeException e)
+            catch (final RuntimeException e)
             {
-                throw getEnvironmentFacade().handleDatabaseException("Error writing message metadata with id "
-                        + messageId
-                        + " to database: "
-                        + e.getMessage(), e);
+                throw getEnvironmentFacade().handleDatabaseException("Error writing message metadata with id " + messageId +
+                        " to database: " + e.getMessage(), e);
             }
         }
         while(!complete);
     }
 
-
-    private static final byte[] ENQUEUE_RECORD_VALUE = new byte[] {};
     /**
      * Places a message onto a specified queue, in a given transaction.
      *
      * @param tx   The transaction for the operation.
-     * @param queue     The the queue to place the message on.
+     * @param queue     The queue to place the message on.
      * @param messageId The message to enqueue.
      *
      * @throws org.apache.qpid.server.store.StoreException If the operation fails for any reason.
      */
-    private void enqueueMessage(final Transaction tx, final TransactionLogResource queue,
-                                long messageId) throws StoreException
+    private void enqueueMessage(final Transaction tx, final TransactionLogResource queue, final long messageId)
+            throws StoreException
     {
-
-        DatabaseEntry key = new DatabaseEntry();
-        QueueEntryKey queueEntryKey = new QueueEntryKey(queue.getId(), messageId);
-        QueueEntryBinding.objectToEntry(queueEntryKey, key);
-        DatabaseEntry value = new DatabaseEntry();
-        value.setData(ENQUEUE_RECORD_VALUE, 0, ENQUEUE_RECORD_VALUE.length);
+        final DatabaseEntry key = QUEUE_ENTRY.get();
+        QueueEntryBinding.objectToEntry(queue.getId(), messageId, key);
 
         try
         {
             if (getLogger().isDebugEnabled())
             {
-                getLogger().debug("Enqueuing message {} on queue {} with id {} in transaction {}",
-                                  messageId, queue.getName(), queue.getId(), tx);
+                getLogger().debug("Enqueuing message {} on queue {} with id {} in transaction {}", messageId,
+                        queue.getName(), queue.getId(), tx);
             }
-            getDeliveryDb().put(tx, key, value);
+            final DatabaseEntry databaseEntry = ENQUEUE_RECORD_ENTRY.get();
+            getDeliveryDb().put(tx, key, databaseEntry);
         }
-        catch (RuntimeException e)
+        catch (final RuntimeException e)
         {
             if (getLogger().isDebugEnabled())
             {
                 getLogger().debug("Failed to enqueue: {}", e.getMessage(), e);
             }
-            throw getEnvironmentFacade().handleDatabaseException("Error writing enqueued message with id "
-                                                                 + messageId
-                                                                 + " for queue "
-                                                                 + queue.getName()
-                                                                 + " with id "
-                                                                 + queue.getId()
-                                                                 + " to database", e);
+            throw getEnvironmentFacade().handleDatabaseException("Error writing enqueued message with id " + messageId +
+                    " for queue " + queue.getName() + " with id " + queue.getId() + " to database", e);
         }
     }
 
@@ -680,34 +640,29 @@ public abstract class AbstractBDBMessageStore implements MessageStore
      *
      * @throws org.apache.qpid.server.store.StoreException If the operation fails for any reason, or if the specified message does not exist.
      */
-    private void dequeueMessage(final Transaction tx, final UUID queueId,
-                                long messageId) throws StoreException
+    private void dequeueMessage(final Transaction tx, final UUID queueId, final long messageId) throws StoreException
     {
+        final DatabaseEntry key = QUEUE_ENTRY.get();
+        QueueEntryBinding.objectToEntry(queueId, messageId, key);
 
-        DatabaseEntry key = new DatabaseEntry();
-        QueueEntryKey queueEntryKey = new QueueEntryKey(queueId, messageId);
-        UUID id = queueId;
-        QueueEntryBinding.objectToEntry(queueEntryKey, key);
-
-        getLogger().debug("Dequeue message id {} from queue with id {}", messageId, id);
+        getLogger().debug("Dequeue message id {} from queue with id {}", messageId, queueId);
 
         try
         {
-
-            OperationStatus status = getDeliveryDb().delete(tx, key);
+            final OperationStatus status = getDeliveryDb().delete(tx, key);
             if (status == OperationStatus.NOTFOUND)
             {
-                throw new StoreException("Unable to find message with id " + messageId + " on queue with id "  + id);
+                throw new StoreException("Unable to find message with id " + messageId + " on queue with id "  + queueId);
             }
             else if (status != OperationStatus.SUCCESS)
             {
-                throw new StoreException("Unable to remove message with id " + messageId + " on queue with id " + id);
+                throw new StoreException("Unable to remove message with id " + messageId + " on queue with id " + queueId);
             }
 
-            getLogger().debug("Removed message {} on queue with id {}", messageId, id);
+            getLogger().debug("Removed message {} on queue with id {}", messageId, queueId);
 
         }
-        catch (RuntimeException e)
+        catch (final RuntimeException e)
         {
             if (getLogger().isDebugEnabled())
             {
@@ -715,31 +670,31 @@ public abstract class AbstractBDBMessageStore implements MessageStore
             }
 
             throw getEnvironmentFacade().handleDatabaseException("Error accessing database while dequeuing message: "
-                                                                 + e.getMessage(), e);
+                    + e.getMessage(), e);
         }
     }
 
-    private List<Runnable> recordXid(Transaction txn,
-                                     long format,
-                                     byte[] globalId,
-                                     byte[] branchId,
-                                     org.apache.qpid.server.store.Transaction.EnqueueRecord[] enqueues,
-                                     org.apache.qpid.server.store.Transaction.DequeueRecord[] dequeues) throws StoreException
+    private List<Runnable> recordXid(final Transaction txn,
+                                     final long format,
+                                     final byte[] globalId,
+                                     final byte[] branchId,
+                                     final org.apache.qpid.server.store.Transaction.EnqueueRecord[] enqueues,
+                                     final org.apache.qpid.server.store.Transaction.DequeueRecord[] dequeues) throws StoreException
     {
-        DatabaseEntry key = new DatabaseEntry();
-        Xid xid = new Xid(format, globalId, branchId);
-        XidBinding keyBinding = XidBinding.getInstance();
+        final DatabaseEntry key = new DatabaseEntry();
+        final Xid xid = new Xid(format, globalId, branchId);
+        final XidBinding keyBinding = XidBinding.getInstance();
         keyBinding.objectToEntry(xid,key);
 
-        DatabaseEntry value = new DatabaseEntry();
-        PreparedTransaction preparedTransaction = new PreparedTransaction(enqueues, dequeues);
+        final DatabaseEntry value = new DatabaseEntry();
+        final PreparedTransaction preparedTransaction = new PreparedTransaction(enqueues, dequeues);
         PreparedTransactionBinding.objectToEntry(preparedTransaction, value);
-        for(org.apache.qpid.server.store.Transaction.EnqueueRecord enqueue : enqueues)
+        for (final org.apache.qpid.server.store.Transaction.EnqueueRecord enqueue : enqueues)
         {
-            StoredMessage storedMessage = enqueue.getMessage().getStoredMessage();
-            if(storedMessage instanceof StoredBDBMessage)
+            final StoredMessage<?> storedMessage = enqueue.getMessage().getStoredMessage();
+            if (storedMessage instanceof StoredBDBMessage<?> storedBDBMessage)
             {
-                ((StoredBDBMessage) storedMessage).store(txn);
+                storedBDBMessage.store(txn);
             }
         }
 
@@ -748,7 +703,7 @@ public abstract class AbstractBDBMessageStore implements MessageStore
             getXidDb().put(txn, key, value);
             return Collections.emptyList();
         }
-        catch (RuntimeException e)
+        catch (final RuntimeException e)
         {
             if (getLogger().isDebugEnabled())
             {
@@ -758,20 +713,18 @@ public abstract class AbstractBDBMessageStore implements MessageStore
         }
     }
 
-    private void removeXid(Transaction txn, long format, byte[] globalId, byte[] branchId)
+    private void removeXid(final Transaction txn, final long format, final byte[] globalId, final byte[] branchId)
             throws StoreException
     {
-        DatabaseEntry key = new DatabaseEntry();
-        Xid xid = new Xid(format, globalId, branchId);
-        XidBinding keyBinding = XidBinding.getInstance();
+        final DatabaseEntry key = new DatabaseEntry();
+        final Xid xid = new Xid(format, globalId, branchId);
+        final XidBinding keyBinding = XidBinding.getInstance();
 
         keyBinding.objectToEntry(xid, key);
 
-
         try
         {
-
-            OperationStatus status = getXidDb().delete(txn, key);
+            final OperationStatus status = getXidDb().delete(txn, key);
             if (status == OperationStatus.NOTFOUND)
             {
                 throw new StoreException("Unable to find xid");
@@ -782,15 +735,15 @@ public abstract class AbstractBDBMessageStore implements MessageStore
             }
 
         }
-        catch (RuntimeException e)
+        catch (final RuntimeException e)
         {
             if (getLogger().isDebugEnabled())
             {
-                getLogger().error("Failed to remove xid in transaction {}", e);
+                getLogger().error("Failed to remove xid in transaction", e);
             }
 
             throw getEnvironmentFacade().handleDatabaseException("Error accessing database while removing xid: "
-                                                                 + e.getMessage(), e);
+                    + e.getMessage(), e);
         }
     }
 
@@ -807,28 +760,20 @@ public abstract class AbstractBDBMessageStore implements MessageStore
         {
             throw new StoreException("Fatal internal error: transactional is null at commitTran");
         }
-
         getEnvironmentFacade().commit(tx);
-
         getLogger().debug("commitTranImpl completed {} transaction synchronous", tx);
-
-
     }
 
-    private <X> CompletableFuture<X> commitTranAsyncImpl(final Transaction tx, X val) throws StoreException
+    private <X> CompletableFuture<X> commitTranAsyncImpl(final Transaction tx, final X val) throws StoreException
     {
         if (tx == null)
         {
             throw new StoreException("Fatal internal error: transactional is null at commitTran");
         }
-
-        CompletableFuture<X> result = getEnvironmentFacade().commitAsync(tx, val);
-
+        final CompletableFuture<X> result = getEnvironmentFacade().commitAsync(tx, val);
         getLogger().debug("commitTranAsynImpl completed transaction {}", tx);
-
         return result;
     }
-
 
     /**
      * Abandons all operations performed within a given transaction.
@@ -845,7 +790,7 @@ public abstract class AbstractBDBMessageStore implements MessageStore
         {
             tx.abort();
         }
-        catch (RuntimeException e)
+        catch (final RuntimeException e)
         {
             throw getEnvironmentFacade().handleDatabaseException("Error aborting transaction: " + e.getMessage(), e);
         }
@@ -857,7 +802,7 @@ public abstract class AbstractBDBMessageStore implements MessageStore
         {
             storedSizeChange(delta);
         }
-        catch(RuntimeException e)
+        catch (final RuntimeException e)
         {
             throw getEnvironmentFacade().handleDatabaseException("Stored size change exception", e);
         }
@@ -865,46 +810,41 @@ public abstract class AbstractBDBMessageStore implements MessageStore
 
     private void storedSizeChange(final int delta)
     {
-        if(getPersistentSizeHighThreshold() > 0)
+        if (getPersistentSizeHighThreshold() > 0)
         {
             synchronized (this)
             {
                 // the delta supplied is an approximation of a store size change. we don;t want to check the statistic every
                 // time, so we do so only when there's been enough change that it is worth looking again. We do this by
                 // assuming the total size will change by less than twice the amount of the message data change.
-                long newSize = _totalStoreSize += 2*delta;
+                final long newSize = _totalStoreSize += 2L * delta;
 
-                if(!_limitBusted &&  newSize > getPersistentSizeHighThreshold())
+                if (!_limitBusted &&  newSize > getPersistentSizeHighThreshold())
                 {
                     _totalStoreSize = getSizeOnDisk();
 
-                    if(_totalStoreSize > getPersistentSizeHighThreshold())
+                    if (_totalStoreSize > getPersistentSizeHighThreshold())
                     {
                         _limitBusted = true;
                         _eventManager.notifyEvent(Event.PERSISTENT_MESSAGE_SIZE_OVERFULL);
                     }
                 }
-                else if(_limitBusted && newSize < getPersistentSizeLowThreshold())
+                else if (_limitBusted && newSize < getPersistentSizeLowThreshold())
                 {
-                    long oldSize = _totalStoreSize;
+                    final long oldSize = _totalStoreSize;
                     _totalStoreSize = getSizeOnDisk();
 
-                    if(oldSize <= _totalStoreSize)
+                    if (oldSize <= _totalStoreSize)
                     {
-
                         reduceSizeOnDisk();
-
                         _totalStoreSize = getSizeOnDisk();
-
                     }
 
-                    if(_totalStoreSize < getPersistentSizeLowThreshold())
+                    if (_totalStoreSize < getPersistentSizeLowThreshold())
                     {
                         _limitBusted = false;
                         _eventManager.notifyEvent(Event.PERSISTENT_MESSAGE_SIZE_UNDERFULL);
                     }
-
-
                 }
             }
         }
@@ -983,12 +923,12 @@ public abstract class AbstractBDBMessageStore implements MessageStore
         private volatile QpidByteBuffer _data;
         private volatile boolean _isHardRef;
 
-        private MessageDataRef(final T metaData, boolean isHardRef)
+        private MessageDataRef(final T metaData, final boolean isHardRef)
         {
             this(metaData, null, isHardRef);
         }
 
-        private MessageDataRef(final T metaData, QpidByteBuffer data, boolean isHardRef)
+        private MessageDataRef(final T metaData, final QpidByteBuffer data, final boolean isHardRef)
         {
             _metaData = metaData;
             _data = data;
@@ -1022,19 +962,19 @@ public abstract class AbstractBDBMessageStore implements MessageStore
 
         public void reallocate()
         {
-            if(_metaData != null)
+            if (_metaData != null)
             {
                 _metaData.reallocate();
             }
             _data = QpidByteBuffer.reallocateIfNecessary(_data);
         }
 
-        public long clear(boolean close)
+        public long clear (final boolean close)
         {
             long bytesCleared = 0;
-            if(_data != null)
+            if (_data != null)
             {
-                if(_data != null)
+                if (_data != null)
                 {
                     bytesCleared += _data.remaining();
                     _data.dispose();
@@ -1066,18 +1006,16 @@ public abstract class AbstractBDBMessageStore implements MessageStore
 
     final class StoredBDBMessage<T extends StorableMessageMetaData> implements StoredMessage<T>, MessageHandle<T>
     {
-
         private final long _messageId;
         private final int _contentSize;
         private final int _metadataSize;
         private MessageDataRef<T> _messageDataRef;
+        private List<QpidByteBuffer> _contentFragments;
 
-        StoredBDBMessage(long messageId, T metaData, boolean isRecovered)
+        StoredBDBMessage(final long messageId, final T metaData, final boolean isRecovered)
         {
             _messageId = messageId;
-
             _messageDataRef = new MessageDataRef<>(metaData, !isRecovered);
-
             _contentSize = metaData.getContentSize();
             _metadataSize = metaData.getStorableSize();
             _inMemorySize.addAndGet(_metadataSize);
@@ -1090,19 +1028,17 @@ public abstract class AbstractBDBMessageStore implements MessageStore
             {
                 return null;
             }
-            else
-            {
-                T metaData = _messageDataRef.getMetaData();
 
-                if (metaData == null)
-                {
-                    checkMessageStoreOpen();
-                    metaData = (T) getMessageMetaData(_messageId);
-                    _messageDataRef = new MessageDataRef<>(metaData, _messageDataRef.getData(), false);
-                    _inMemorySize.addAndGet(getMetadataSize());
-                }
-                return metaData;
+            T metaData = _messageDataRef.getMetaData();
+
+            if (metaData == null)
+            {
+                checkMessageStoreOpen();
+                metaData = (T) getMessageMetaData(_messageId);
+                _messageDataRef = new MessageDataRef<>(metaData, _messageDataRef.getData(), false);
+                _inMemorySize.addAndGet(getMetadataSize());
             }
+            return metaData;
         }
 
         @Override
@@ -1112,24 +1048,32 @@ public abstract class AbstractBDBMessageStore implements MessageStore
         }
 
         @Override
-        public synchronized void addContent(QpidByteBuffer src)
+        public synchronized void addContent(final QpidByteBuffer src)
         {
-            try(QpidByteBuffer data = _messageDataRef.getData())
+            // accumulate content fragments and consolidate lazily
+            if (_messageDataRef == null)
             {
-                if(data == null)
+                return;
+            }
+
+            if (_contentFragments == null)
+            {
+                _contentFragments = new ArrayList<>();
+
+                final QpidByteBuffer existingData = _messageDataRef.getData();
+                if (existingData != null)
                 {
-                    _messageDataRef.setData(src.slice());
-                }
-                else
-                {
-                    _messageDataRef.setData(QpidByteBuffer.concatenate(Arrays.asList(data, src)));
+                    _contentFragments.add(existingData);
+                    _messageDataRef.setData(null);
                 }
             }
+            _contentFragments.add(src.slice());
         }
 
         @Override
-        public StoredMessage<T> allContentAdded()
+        public synchronized StoredMessage<T> allContentAdded()
         {
+            consolidateContentFragmentsIfNecessary();
             _inMemorySize.addAndGet(getContentSize());
             return this;
         }
@@ -1140,9 +1084,13 @@ public abstract class AbstractBDBMessageStore implements MessageStore
         private QpidByteBuffer getContentAsByteBuffer()
         {
             QpidByteBuffer data = _messageDataRef == null ? QpidByteBuffer.emptyQpidByteBuffer() : _messageDataRef.getData();
-            if(data == null)
+            if (data == null)
             {
-                if(stored())
+                if (_contentFragments != null && !_contentFragments.isEmpty())
+                {
+                    data = consolidateContentFragmentsIfNecessary();
+                }
+                else if (stored())
                 {
                     checkMessageStoreOpen();
                     data = AbstractBDBMessageStore.this.getAllContent(_messageId);
@@ -1157,11 +1105,43 @@ public abstract class AbstractBDBMessageStore implements MessageStore
             return data;
         }
 
+        private QpidByteBuffer consolidateContentFragmentsIfNecessary()
+        {
+            if (_messageDataRef == null)
+            {
+                return QpidByteBuffer.emptyQpidByteBuffer();
+            }
+
+            final QpidByteBuffer existingData = _messageDataRef.getData();
+            if (_contentFragments == null || _contentFragments.isEmpty())
+            {
+                return existingData;
+            }
+
+            final List<QpidByteBuffer> fragments = _contentFragments;
+            _contentFragments = null;
+
+            if (fragments.size() == 1)
+            {
+                final QpidByteBuffer single = fragments.get(0);
+                _messageDataRef.setData(single);
+                return single;
+            }
+
+            final QpidByteBuffer consolidated = QpidByteBuffer.concatenate(fragments);
+            for (final QpidByteBuffer fragment : fragments)
+            {
+                fragment.dispose();
+            }
+
+            _messageDataRef.setData(consolidated);
+            return consolidated;
+        }
 
         @Override
-        public synchronized QpidByteBuffer getContent(int offset, int length)
+        public synchronized QpidByteBuffer getContent(final int offset, int length)
         {
-            QpidByteBuffer contentAsByteBuffer = getContentAsByteBuffer();
+            final QpidByteBuffer contentAsByteBuffer = getContentAsByteBuffer();
             if (length == Integer.MAX_VALUE)
             {
                 length = contentAsByteBuffer.remaining();
@@ -1181,15 +1161,14 @@ public abstract class AbstractBDBMessageStore implements MessageStore
             return _metadataSize;
         }
 
-        synchronized void store(Transaction txn)
+        synchronized void store(final Transaction txn)
         {
             if (!stored())
             {
+                consolidateContentFragmentsIfNecessary();
                 AbstractBDBMessageStore.this.storeMetaData(txn, _messageId, _messageDataRef.getMetaData());
-                AbstractBDBMessageStore.this.addContent(txn, _messageId,
-                                                        _messageDataRef.getData() == null
-                                                                ? QpidByteBuffer.emptyQpidByteBuffer()
-                                                                : _messageDataRef.getData());
+                AbstractBDBMessageStore.this.addContent(txn, _messageId, _messageDataRef.getData() == null
+                        ? QpidByteBuffer.emptyQpidByteBuffer() : _messageDataRef.getData());
                 _messageDataRef.setSoft();
             }
         }
@@ -1207,13 +1186,12 @@ public abstract class AbstractBDBMessageStore implements MessageStore
                     {
                         txn = getEnvironmentFacade().beginTransaction(null);
                     }
-                    catch (RuntimeException e)
+                    catch (final RuntimeException e)
                     {
                         throw getEnvironmentFacade().handleDatabaseException("failed to begin transaction", e);
                     }
                     store(txn);
                     getEnvironmentFacade().commitAsync(txn, false);
-
                 }
             }
         }
@@ -1223,7 +1201,7 @@ public abstract class AbstractBDBMessageStore implements MessageStore
         {
             checkMessageStoreOpen();
             _messages.remove(this);
-            if(stored())
+            if (stored())
             {
                 removeMessage(_messageId);
                 storedSizeChangeOccurred(-getContentSize());
@@ -1244,7 +1222,9 @@ public abstract class AbstractBDBMessageStore implements MessageStore
                 metaData.dispose();
             }
 
-            try (QpidByteBuffer data = _messageDataRef.getData())
+            bytesCleared += clearContentFragments();
+
+            try (final QpidByteBuffer data = _messageDataRef.getData())
             {
                 if (data != null)
                 {
@@ -1256,10 +1236,28 @@ public abstract class AbstractBDBMessageStore implements MessageStore
             _inMemorySize.addAndGet(-bytesCleared);
         }
 
+        private long clearContentFragments()
+        {
+            long bytesCleared = 0;
+            if (_contentFragments != null)
+            {
+                for (final QpidByteBuffer fragment : _contentFragments)
+                {
+                    bytesCleared += fragment.remaining();
+                    fragment.dispose();
+                }
+                _contentFragments = null;
+            }
+            return bytesCleared;
+        }
+
         @Override
         public synchronized boolean isInContentInMemory()
         {
-            return _messageDataRef != null && (_messageDataRef.isHardRef() || _messageDataRef.getData() != null);
+            return _messageDataRef != null
+                    && (_messageDataRef.isHardRef()
+                    || _messageDataRef.getData() != null
+                    || (_contentFragments != null && !_contentFragments.isEmpty()));
         }
 
         @Override
@@ -1278,7 +1276,7 @@ public abstract class AbstractBDBMessageStore implements MessageStore
                     {
                         size += getMetadataSize();
                     }
-                    if (_messageDataRef.getData() != null)
+                    if (_messageDataRef.getData() != null || (_contentFragments != null && !_contentFragments.isEmpty()))
                     {
                         size += getContentSize();
                     }
@@ -1295,11 +1293,10 @@ public abstract class AbstractBDBMessageStore implements MessageStore
         @Override
         public synchronized boolean flowToDisk()
         {
-
             flushToStore();
-            if(_messageDataRef != null && !_messageDataRef.isHardRef())
+            if (_messageDataRef != null && !_messageDataRef.isHardRef())
             {
-                final long bytesCleared = _messageDataRef.clear(false);
+                final long bytesCleared = _messageDataRef.clear(false) + clearContentFragments();
                 _inMemorySize.addAndGet(-bytesCleared);
                 _bytesEvacuatedFromMemory.addAndGet(bytesCleared);
             }
@@ -1315,27 +1312,29 @@ public abstract class AbstractBDBMessageStore implements MessageStore
         @Override
         public synchronized void reallocate()
         {
-            if(_messageDataRef != null)
+            if (_messageDataRef != null)
             {
+                consolidateContentFragmentsIfNecessary();
                 _messageDataRef.reallocate();
             }
         }
 
-        public synchronized void clear(boolean close)
+        public synchronized void clear(final boolean close)
         {
             if (_messageDataRef != null)
             {
                 _messageDataRef.clear(close);
+                clearContentFragments();
             }
         }
     }
 
-
     private class BDBTransaction implements org.apache.qpid.server.store.Transaction
     {
         private final Transaction _txn;
-        private final List<Runnable> _preCommitActions = new ArrayList<>();
         private final List<Runnable> _postCommitActions = new ArrayList<>();
+        private final ArrayList<StoredBDBMessage<?>> _messagesToStore = new ArrayList<>();
+        private final IdentityHashMap<StoredBDBMessage<?>, Boolean> _messagesToStoreSet = new IdentityHashMap<>();
 
         private int _storeSizeIncrease;
 
@@ -1356,16 +1355,13 @@ public abstract class AbstractBDBMessageStore implements MessageStore
         {
             checkMessageStoreOpen();
 
-            if(message.getStoredMessage() instanceof StoredBDBMessage)
+            if (message.getStoredMessage() instanceof StoredBDBMessage<?> storedMessage)
             {
-                final StoredBDBMessage storedMessage = (StoredBDBMessage) message.getStoredMessage();
-                final long contentSize = storedMessage.getContentSize();
-                _preCommitActions.add(() ->
+                if (_messagesToStoreSet.put(storedMessage, Boolean.TRUE) == null)
                 {
-                    storedMessage.store(_txn);
-                    _storeSizeIncrease += contentSize;
-                });
-
+                    _messagesToStore.add(storedMessage);
+                    _storeSizeIncrease += storedMessage.getContentSize();
+                }
             }
 
             AbstractBDBMessageStore.this.enqueueMessage(_txn, queue, message.getMessageNumber());
@@ -1376,28 +1372,27 @@ public abstract class AbstractBDBMessageStore implements MessageStore
         public void dequeueMessage(final MessageEnqueueRecord enqueueRecord)
         {
             checkMessageStoreOpen();
-
-            AbstractBDBMessageStore.this.dequeueMessage(_txn, enqueueRecord.getQueueId(),
-                                                        enqueueRecord.getMessageNumber());
+            AbstractBDBMessageStore.this.dequeueMessage(_txn, enqueueRecord.getQueueId(), enqueueRecord.getMessageNumber());
         }
 
         @Override
         public void commitTran() throws StoreException
         {
             checkMessageStoreOpen();
-            doPreCommitActions();
+            doPreCommitStores();
             AbstractBDBMessageStore.this.commitTranImpl(_txn);
             doPostCommitActions();
             AbstractBDBMessageStore.this.storedSizeChangeOccurred(_storeSizeIncrease);
         }
 
-        private void doPreCommitActions()
+        private void doPreCommitStores()
         {
-            for(Runnable action : _preCommitActions)
+            for (final StoredBDBMessage<?> message : _messagesToStore)
             {
-                action.run();
+                message.store(_txn);
             }
-            _preCommitActions.clear();
+            _messagesToStore.clear();
+            _messagesToStoreSet.clear();
         }
 
         private void doPostCommitActions()
@@ -1417,7 +1412,7 @@ public abstract class AbstractBDBMessageStore implements MessageStore
         public <X> CompletableFuture<X> commitTranAsync(final X val) throws StoreException
         {
             checkMessageStoreOpen();
-            doPreCommitActions();
+            doPreCommitStores();
             AbstractBDBMessageStore.this.storedSizeChangeOccurred(_storeSizeIncrease);
             CompletableFuture<X> futureResult = AbstractBDBMessageStore.this.commitTranAsyncImpl(_txn, val);
             doPostCommitActions();
@@ -1428,7 +1423,8 @@ public abstract class AbstractBDBMessageStore implements MessageStore
         public void abortTran() throws StoreException
         {
             checkMessageStoreOpen();
-            _preCommitActions.clear();
+            _messagesToStore.clear();
+            _messagesToStoreSet.clear();
             _postCommitActions.clear();
             AbstractBDBMessageStore.this.abortTran(_txn);
         }
@@ -1437,20 +1433,20 @@ public abstract class AbstractBDBMessageStore implements MessageStore
         public void removeXid(final StoredXidRecord record)
         {
             checkMessageStoreOpen();
-
             AbstractBDBMessageStore.this.removeXid(_txn, record.getFormat(), record.getGlobalId(), record.getBranchId());
         }
 
         @Override
-        public StoredXidRecord recordXid(final long format, final byte[] globalId, final byte[] branchId, final EnqueueRecord[] enqueues,
+        public StoredXidRecord recordXid(final long format,
+                                         final byte[] globalId,
+                                         final byte[] branchId,
+                                         final EnqueueRecord[] enqueues,
                                          final DequeueRecord[] dequeues) throws StoreException
         {
             checkMessageStoreOpen();
-
             _postCommitActions.addAll(AbstractBDBMessageStore.this.recordXid(_txn, format, globalId, branchId, enqueues, dequeues));
             return new BDBStoredXidRecord(format, globalId, branchId);
         }
-
     }
 
     @Override
@@ -1513,42 +1509,31 @@ public abstract class AbstractBDBMessageStore implements MessageStore
             return _format == that._format
                    && Arrays.equals(_globalId, that._globalId)
                    && Arrays.equals(_branchId, that._branchId);
-
         }
 
         @Override
         public int hashCode()
         {
-            int result = (int) (_format ^ (_format >>> 32));
+            int result = Long.hashCode(_format);
             result = 31 * result + Arrays.hashCode(_globalId);
             result = 31 * result + Arrays.hashCode(_branchId);
             return result;
         }
     }
-    public static class BDBEnqueueRecord implements MessageEnqueueRecord
+
+    public record BDBEnqueueRecord(UUID queueId, long messageNumber) implements MessageEnqueueRecord
     {
-        private final UUID _queueId;
-
-        private final long _messageNumber;
-
-        public BDBEnqueueRecord(final UUID queueid, final long messageNumber)
+        @Override
+        public UUID getQueueId()
         {
-            _queueId = queueid;
-            _messageNumber = messageNumber;
+            return queueId;
         }
 
         @Override
         public long getMessageNumber()
         {
-            return _messageNumber;
+            return messageNumber;
         }
-
-        @Override
-        public UUID getQueueId()
-        {
-            return _queueId;
-        }
-
     }
 
     private class BDBMessageStoreReader implements MessageStoreReader
@@ -1578,86 +1563,168 @@ public abstract class AbstractBDBMessageStore implements MessageStore
         {
             checkMessageStoreOpen();
 
-            final List<QueueEntryKey> entries = new ArrayList<>();
-            try(Cursor cursor = getDeliveryDb().openCursor(null, null))
+            long[] entries = new long[1024];
+            int size = 0;
+
+            try (final Cursor cursor = getDeliveryDb().openCursor(null, null))
             {
-                DatabaseEntry key = new DatabaseEntry();
-                DatabaseEntry value = new DatabaseEntry();
-                value.setPartial(0, 0, true);
+                final DatabaseEntry key = new DatabaseEntry(new byte[QueueEntryBinding.KEY_SIZE]);
 
-                CachingUUIDFactory uuidFactory = new CachingUUIDFactory();
-                QueueEntryBinding.objectToEntry(new QueueEntryKey(queue.getId(), 0L), key);
+                QueueEntryBinding.objectToEntry(queue.getId(), 0L, key);
 
-                if (cursor.getSearchKeyRange(key, value, LockMode.READ_UNCOMMITTED) == OperationStatus.SUCCESS)
+                if (cursor.getSearchKeyRange(key, null, LockMode.READ_UNCOMMITTED) == OperationStatus.SUCCESS)
                 {
                     do
                     {
-                        QueueEntryKey entry = QueueEntryBinding.entryToObject(uuidFactory, key);
-                        if (entry.getQueueId().equals(queue.getId()))
+                        if (QueueEntryBinding.matchesQueueId(key, queue.getId()))
                         {
-                            entries.add(entry);
+                            if (size == entries.length)
+                            {
+                                entries = Arrays.copyOf(entries, entries.length * 2);
+                            }
+                            entries[size++] = QueueEntryBinding.readMessageId(key);
                         }
                         else
                         {
                             break;
                         }
                     }
-                    while (cursor.getNext(key, value, LockMode.READ_UNCOMMITTED) == OperationStatus.SUCCESS);
+                    while (cursor.getNext(key, null, LockMode.READ_UNCOMMITTED) == OperationStatus.SUCCESS);
                 }
             }
-            catch (RuntimeException e)
+            catch (final RuntimeException e)
             {
                 throw getEnvironmentFacade().handleDatabaseException("Cannot visit message instances", e);
             }
 
-            for(QueueEntryKey entry : entries)
+            for (int i = 0; i < size; i ++)
             {
-                UUID queueId = entry.getQueueId();
-                long messageId = entry.getMessageId();
-                if (!handler.handle(new BDBEnqueueRecord(queueId, messageId)))
+                if (!handler.handle(new BDBEnqueueRecord(queue.getId(), entries[i])))
                 {
                     break;
                 }
             }
-
         }
 
+        @Override
+        public void visitMessageInstances(final MessageInstanceHandler validHandler,
+                                          final Predicate<MessageEnqueueRecord> predicate,
+                                          final Consumer<MessageEnqueueRecord> invalidCollector) throws StoreException
+        {
+            checkMessageStoreOpen();
 
+            final CachingUUIDFactory uuidFactory = new CachingUUIDFactory();
+
+            // Callbacks are invoked while iterating a BDB cursor; BDB resources/locks may be held.
+            // Callbacks must be fast and must not re-enter the store (including creating transactions, reading
+            // messages, or performing other database operations). Only validHandler controls early termination.
+            try (final Cursor cursor = getDeliveryDb().openCursor(null, null))
+            {
+                final DatabaseEntry key = new DatabaseEntry(new byte[QueueEntryBinding.KEY_SIZE]);
+
+                while (cursor.getNext(key, null, LockMode.READ_UNCOMMITTED) == OperationStatus.SUCCESS)
+                {
+                    final MessageEnqueueRecord record = QueueEntryBinding.readIds(uuidFactory, key);
+
+                    if (predicate.test(record))
+                    {
+                        if (!validHandler.handle(record))
+                        {
+                            break;
+                        }
+                    }
+                    else
+                    {
+                        invalidCollector.accept(record);
+                    }
+                }
+            }
+            catch (final RuntimeException e)
+            {
+                throw getEnvironmentFacade().handleDatabaseException("Cannot visit message instances", e);
+            }
+        }
+
+        @Override
+        public void visitMessageInstances(final TransactionLogResource queue,
+                                          final MessageInstanceHandler validHandler,
+                                          final Predicate<MessageEnqueueRecord> predicate,
+                                          final Consumer<MessageEnqueueRecord> invalidCollector) throws StoreException
+        {
+            checkMessageStoreOpen();
+
+            final UUID queueId = queue.getId();
+
+            // Callbacks are invoked while iterating a BDB cursor; BDB resources/locks may be held.
+            // Callbacks must be fast and must not re-enter the store (including creating transactions, reading
+            // messages, or performing other database operations). Only validHandler controls early termination.
+            try (final Cursor cursor = getDeliveryDb().openCursor(null, null))
+            {
+                final DatabaseEntry key = new DatabaseEntry(new byte[QueueEntryBinding.KEY_SIZE]);
+
+                QueueEntryBinding.objectToEntry(queueId, 0L, key);
+
+                if (cursor.getSearchKeyRange(key, null, LockMode.READ_UNCOMMITTED) == OperationStatus.SUCCESS)
+                {
+                    do
+                    {
+                        if (!QueueEntryBinding.matchesQueueId(key, queueId))
+                        {
+                            break;
+                        }
+
+                        final long messageId = QueueEntryBinding.readMessageId(key);
+                        final MessageEnqueueRecord record = new BDBEnqueueRecord(queueId, messageId);
+
+                        if (predicate.test(record))
+                        {
+                            if (!validHandler.handle(record))
+                            {
+                                break;
+                            }
+                        }
+                        else
+                        {
+                            invalidCollector.accept(record);
+                        }
+                    }
+                    while (cursor.getNext(key, null, LockMode.READ_UNCOMMITTED) == OperationStatus.SUCCESS);
+                }
+            }
+            catch (final RuntimeException e)
+            {
+                throw getEnvironmentFacade().handleDatabaseException("Cannot visit message instances", e);
+            }
+        }
 
         @Override
         public void visitMessageInstances(final MessageInstanceHandler handler) throws StoreException
         {
             checkMessageStoreOpen();
 
-            List<QueueEntryKey> entries = new ArrayList<>();
-            try(Cursor cursor = getDeliveryDb().openCursor(null, null))
+            final CachingUUIDFactory uuidFactory = new CachingUUIDFactory();
+            final List<BDBEnqueueRecord> entries = new ArrayList<>();
+            try (final Cursor cursor = getDeliveryDb().openCursor(null, null))
             {
-                DatabaseEntry key = new DatabaseEntry();
-                CachingUUIDFactory uuidFactory = new CachingUUIDFactory();
+                final DatabaseEntry key = new DatabaseEntry(new byte[QueueEntryBinding.KEY_SIZE]);
 
-                DatabaseEntry value = new DatabaseEntry();
-                value.setPartial(0, 0, true);
-                while (cursor.getNext(key, value, LockMode.READ_UNCOMMITTED) == OperationStatus.SUCCESS)
+                while (cursor.getNext(key, null, LockMode.READ_UNCOMMITTED) == OperationStatus.SUCCESS)
                 {
-                    QueueEntryKey entry = QueueEntryBinding.entryToObject(uuidFactory, key);
-                    entries.add(entry);
+                    entries.add(QueueEntryBinding.readIds(uuidFactory, key));
                 }
             }
-            catch (RuntimeException e)
+            catch (final RuntimeException e)
             {
                 throw getEnvironmentFacade().handleDatabaseException("Cannot visit message instances", e);
             }
 
-            for(QueueEntryKey entry : entries)
+            for (final BDBEnqueueRecord entry : entries)
             {
-                UUID queueId = entry.getQueueId();
-                long messageId = entry.getMessageId();
-                if (!handler.handle(new BDBEnqueueRecord(queueId, messageId)))
+                if (!handler.handle(entry))
                 {
                     break;
                 }
             }
-
         }
 
         @Override
@@ -1665,30 +1732,28 @@ public abstract class AbstractBDBMessageStore implements MessageStore
         {
             checkMessageStoreOpen();
 
-            try(Cursor cursor = getXidDb().openCursor(null, null))
+            try (final Cursor cursor = getXidDb().openCursor(null, null))
             {
-                CachingUUIDFactory uuidFactory = new CachingUUIDFactory();
-                DatabaseEntry key = new DatabaseEntry();
-                XidBinding keyBinding = XidBinding.getInstance();
-                DatabaseEntry value = new DatabaseEntry();
+                final CachingUUIDFactory uuidFactory = new CachingUUIDFactory();
+                final DatabaseEntry key = new DatabaseEntry();
+                final XidBinding keyBinding = XidBinding.getInstance();
+                final DatabaseEntry value = new DatabaseEntry();
 
                 while (cursor.getNext(key, value, LockMode.READ_UNCOMMITTED) == OperationStatus.SUCCESS)
                 {
-                    Xid xid = keyBinding.entryToObject(key);
-                    PreparedTransaction preparedTransaction = PreparedTransactionBinding.entryToObject(uuidFactory, value);
-                    if (!handler.handle(new BDBStoredXidRecord(xid.getFormat(), xid.getGlobalId(), xid.getBranchId()),
-                                        preparedTransaction.getEnqueues(), preparedTransaction.getDequeues()))
+                    final Xid xid = keyBinding.entryToObject(key);
+                    final PreparedTransaction preparedTransaction = PreparedTransactionBinding.entryToObject(uuidFactory, value);
+                    final BDBStoredXidRecord record = new BDBStoredXidRecord(xid.getFormat(), xid.getGlobalId(), xid.getBranchId());
+                    if (!handler.handle(record, preparedTransaction.enqueues(), preparedTransaction.dequeues()))
                     {
                         break;
                     }
                 }
             }
-            catch (RuntimeException e)
+            catch (final RuntimeException e)
             {
                 throw getEnvironmentFacade().handleDatabaseException("Cannot recover distributed transactions", e);
             }
         }
-
-
     }
 }
